# rotation_network_v2

./: .gitignore  Dockerfile  README.md  inference.py  pyproject.toml  rot_ex.ipynb  train.py
